--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hotkeys",
+  "name": "@elbstack/react-hotkeys",
   "version": "1.1.3",
   "description": "A declarative library for handling hotkeys and focus within a React application",
   "main": "index",
